# xfa-pdf-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-04-02-remote-mcp-server.md
lib/: XfaSave.java
scripts/: acrobat_post_process.py
src/xfa_pdf_mcp/: api.py  engine.py  server.py  server_remote.py
tests/: conftest.py  test_engine.py  test_engine_bytes.py  test_integration.py
