[project]
name = "xfa-pdf-mcp"
version = "0.1.0"
description = "MCP server for reading and filling XFA-PDF form fields"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "xfa", "pdf", "form-filling", "immigration", "ircc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pikepdf>=8.0.0",
    "lxml>=4.9.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
xfa-pdf-mcp = "xfa_pdf_mcp.server:main"
xfa-pdf-mcp-remote = "xfa_pdf_mcp.server_remote:main"

[project.urls]
Repository = "https://github.com/VisaFlo/xfa-pdf-mcp"
Issues = "https://github.com/VisaFlo/xfa-pdf-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
